ingress/servicedeployment.yaml
---
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rcm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcm
      tier: frontend
  template:
    metadata:
      labels:
        app: rcm
        tier: frontend
    spec:
      containers:
        - name: redis
          image: redis:6.0.6-alpine
          imagePullPolicy: IfNotPresent
        - name: app
          image: image/kipu-rcm-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
#service
apiVersion: v1
kind: Service
metadata:
  name: rcm-service
spec:
  selector:
    app: rcm
    tier: frontend
  ports:
    - port: 80
      targetPort: 8080
      
---
#ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rcm-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
spec:
  rules:
  - http:
      paths:
        - path: /rcm_services
          backend:
            serviceName: rcm-service 
            servicePort: 80
